/*
 * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

/*
 * Protos for serializing Tribuo's GMM.
 */
package tribuo.clustering.gmm;

option java_multiple_files = true;
option java_package = "org.tribuo.clustering.gmm.protos";

// Import Tribuo's core protos
import "tribuo-core.proto";

// Import Tribuo's math protos
import "tribuo-math.proto";

/*
GaussianMixtureModel proto
 */
message GaussianMixtureModelProto {
 enum CovarianceTypeProto {
  FULL = 0;
  DIAGONAL = 1;
  SPHERICAL = 2;
 }
 tribuo.core.ModelDataProto metadata = 1;
 tribuo.math.TensorProto mixing_distribution = 2;
 repeated tribuo.math.TensorProto mean_vectors = 3;
 repeated tribuo.math.TensorProto covariance_matrices = 4;
 CovarianceTypeProto covariance_type = 5;
}
